# WindsurfManager

./: .gitignore  README.md  README.zh-CN.md  background.js  index.html  manifest.json  package-lock.json  package.json  popup.css  popup.html  popup.js  sidepanel.html  vite.config.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: account_commands.rs  mod.rs  settings_commands.rs  tag_commands.rs
src-tauri/src/db/: accounts.rs  mod.rs  settings.rs  tags.rs
src-tauri/src/models/: account.rs  mod.rs  settings.rs  tag.rs
src-tauri/src/services/: keyring_service.rs
src/api/: index.ts
src/components/: AccountCard.vue  AddAccountDialog.vue  EditAccountDialog.vue
src/stores/: accounts.ts  settings.ts  tags.ts
src/views/: MainLayout.vue
